--- a/banner_demo_gen5/templates/bd250.html
+++ b/banner_demo_gen5/templates/bd250.html
@@ -5,21 +5,23 @@
 <title>Demo</title>
 <style>
 *{margin:0;padding:0}
-#bg{width:1100px;height:4364px;margin:0 auto;background:url(images/bd250.jpg) no-repeat;}
-#fullpage_wrapper{width:1988px;position:fixed;left:50%;top:0%;transform:translate(-50%, 0%);}
+#bg{width:1100px;height:3947px;margin:0 auto; margin-top: 50px;background:url(images/bd.jpg) no-repeat;}
+#fullpage_wrapper{width:1986px;position:fixed;left:50%;top:0%;transform:translate(-50%, 0%);}
 #left_wrapper{width:780px;position:relative;float:left}
 #right_wrapper{width:320px;position:relative;float:right}
-#phaicodinh1{width:300px;height:600px;position: relative; top:985px}
-#phaicodinh2{width:300px;height:250px;position: relative; top:1523px}
-#sticky{width:300px;height:600px}
-#top100{width:1100px;height:250px;position: relative; top:50px}
-#hot{width:336px;height:280px;position: relative; top:2349px; left:20px}
+#phaicodinh1{width:300px;height:600px;position: relative; top:664px}
+#phaicodinh2{width:300px;height:250px;position: relative; top:1172px}
+#phaicodinh3{width:300px;height:600px}
+#masthead{width:1100px;height:100px;position: relative; top:50px; margin: 0 auto;}
+#masthead2{width:1100px;height:250px;position: relative; top:50px; margin: 0 auto;}
+#hot{width:336px;height:280px;position: relative; top:2194px; left:20px}
+#sticky{width:696px;height:90px;position: relative; left:20px; display: none}
 #top_menu{width:2000px;height:50px;position:fixed;left:50%;top:0%;transform:translate(-50%, 0%);z-index:9999;background: #bbbbbb;transition: top 0.2s;}
 .bg_area{width:444px;height:1040px;margin-top:50px;transition: all 0.2s;}
-.bg_area_small{width:205px;margin-top:50px;display:none;transition: all 0.2s;}
+.bg_area_small{width:170px;margin-top:50px;display:none;transition: all 0.2s;}
 @media screen and (max-width: 1366px) {
     #fullpage_wrapper {
-      width:1510px !important;
+      width:1438px !important;
     }
     .bg_area{
       display:none !important;
@@ -28,6 +30,8 @@
       display:block !important;
     }
 }
+a.boxclose{cursor:pointer;color: #fff;border: 1px solid #AEAEAE;background: #605F61;font-size: 24px;font-weight: bold;display: inline-block;line-height: 0px;padding: 10px 3px;z-index: 1;position: absolute;top:0;right:-20px;}
+.boxclose:before {content: "\00d7";}
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script src="jquery.sticky.js"></script>
@@ -35,31 +39,35 @@
 
 <body>
 <div id="top_menu"><img src="images/top_menu.jpg"></div>
+<div id="masthead2"><img src="images/top250.jpg" width="1100px"></div>
 <div id="fullpage_wrapper">
   <div style="float:left">
     <div class="bg_area"><img src="images/left_to.jpg" width="444px"></div>
-    <div class="bg_area_small"><img src="images/left_nho.jpg" width="205px"></div>
+    <div class="bg_area_small"><img src="images/left_nho.jpg" width="170px"></div>
   </div>
   <div style="float:right">
     <div class="bg_area"><img src="images/right_to.jpg" width="444px"></div>
-    <div class="bg_area_small"><img src="images/right_nho.jpg" width="205px"></div>
+    <div class="bg_area_small"><img src="images/right_nho.jpg" width="170px"></div>
   </div>
 </div>
   <div id="bg">
     <div id="left_wrapper">
-      <div id="top100"><img src="images/1100250.jpg" width="1100px"></div>
       <div id="hot"><img src="images/336280.jpg" width="336px"></div>
+      <div style="position: fixed;bottom: 0;">
+        <a class="boxclose" id="icon-close" style="display: none;"></a>
+        <div id="sticky"><img src="images/sticky.jpg" width="696px"></div>
+      </div>
     </div>
     <div id="right_wrapper">
       <div id="phaicodinh1"><img src="images/300600.jpg" width="300px"></div>
       <div id="phaicodinh2"><img src="images/300250.jpg" width="300px"></div>
-      <div style="height:2020px"></div>
-      <div id="sticky"><img src="images/sticky.jpg" width="300px"></div>
+      <div style="height:1669px"></div>
+      <div id="phaicodinh3"><img src="images/300600b.jpg" width="300px"></div>
     </div>
   </div>
 <script>
   $(document).ready(function(){
-    $("#sticky").sticky({topSpacing:0,bottomSpacing:300});
+    $("#phaicodinh3").sticky({topSpacing:0,bottomSpacing:300});
   });
 </script>
 <script>
@@ -71,11 +79,20 @@
       $("#top_menu").css('top',0);
       $(".bg_area").css('margin-top',"50px");
       $(".bg_area_small").css('margin-top',"50px");
-    } else {
+    }
+    if (currentScrollPos > 50 ) {
       //document.getElementById("top_menu").style.top = "-50px";
       $("#top_menu").css('top',"-50px");
       $(".bg_area").css("margin-top","0px");
       $(".bg_area_small").css("margin-top","0px");
+    }
+    if (currentScrollPos < 600 ) {
+      $("#sticky").css("display","none");
+      $("#icon-close").css("display","none");
+    }
+    if (currentScrollPos >= 600 ) {
+      $("#sticky").css("display","block");
+      $("#icon-close").css("display","block");
     }
     prevScrollpos = currentScrollPos;
   }
