--- a/banner_demo_gen5/templates/bv250.html
+++ b/banner_demo_gen5/templates/bv250.html
@@ -5,24 +5,24 @@
 <title>Demo</title>
 <style>
 *{margin:0;padding:0}
-#bg{width:1016px;height:6118px;margin:0 auto;background:url(images/bv250.jpg) no-repeat;}
-#fullpage_wrapper{width:1904px;position:fixed;left:50%;top:0%;transform:translate(-50%, 0%);}
+#bg{width:1016px;height:5818px;margin:0 auto;margin-top: 50px;background:url(images/bv.jpg) no-repeat;}
+#fullpage_wrapper{width:1902px;position:fixed;left:50%;top:0%;transform:translate(-50%, 0%);}
 #left_wrapper{width:710px;position:relative;float:left}
 #right_wrapper{width:306px;position:relative;float:right}
-#phaicodinh1{width:300px;height:600px;position: relative; top:314px}
-#phaicodinh2{width:300px;height:250px;position: relative; top:745px}
+#phaicodinh1{width:300px;height:600px;position: relative; top:14px}
+#phaicodinh2{width:300px;height:250px;position: relative; top:445px}
 #phaicodinh3{width:300px;height:600px}
-#masthead{width:1016px;height:100px;position: relative; top:50px}
-#masthead2{width:1016px;height:250px;position: relative; top:50px}
-#chanbv{width:696px;height:120px;position: relative; top:2235px; left:6px}
-#hot{width:336px;height:280px;position: relative; top:3089px; left:6px}
+#masthead{width:1016px;height:100px;position: relative; top:50px; margin: 0 auto;}
+#masthead2{width:1016px;height:250px;position: relative; top:50px; margin: 0 auto;}
+#chanbv{width:696px;height:120px;position: relative; top:2185px; left:6px}
+#hot{width:336px;height:280px;position: relative; top:3039px; left:6px}
 #sticky{width:696px;height:90px;position: relative; left:6px; display: none}
 #top_menu{width:2000px;height:50px;position:fixed;left:50%;top:0%;transform:translate(-50%, 0%);z-index:9999;background: #bbbbbb;transition: top 0.2s;}
 .bg_area{width:444px;height:1040px;margin-top:50px;transition: all 0.2s;}
 .bg_area_small{width:205px;margin-top:50px;display:none;transition: all 0.2s;}
 @media screen and (max-width: 1366px) {
     #fullpage_wrapper {
-      width:1426px !important;
+      width:1424px !important;
     }
     .bg_area{
       display:none !important;
@@ -40,6 +40,7 @@ a.boxclose{cursor:pointer;color: #fff;border: 1px solid #AEAEAE;background: #605
 
 <body>
 <div id="top_menu"><img src="images/top_menu.jpg"></div>
+<div id="masthead2"><img src="images/top250.jpg" width="1016px"></div>
 <div id="fullpage_wrapper">
   <div style="float:left">
     <div class="bg_area"><img src="images/left_to.jpg" width="444px"></div>
@@ -52,7 +53,6 @@ a.boxclose{cursor:pointer;color: #fff;border: 1px solid #AEAEAE;background: #605
 </div>
   <div id="bg">
     <div id="left_wrapper">
-      <div id="masthead2"><img src="images/1016250.jpg" width="1016px"></div>
       <div id="chanbv"><img src="images/chanbv.jpg" width="696px"></div>
       <div id="hot"><img src="images/336280.jpg" width="336px"></div>
       <div style="position: fixed;bottom: 0;">
@@ -63,7 +63,7 @@ a.boxclose{cursor:pointer;color: #fff;border: 1px solid #AEAEAE;background: #605
     <div id="right_wrapper">
       <div id="phaicodinh1"><img src="images/300600.jpg" width="300px"></div>
       <div id="phaicodinh2"><img src="images/300250.jpg" width="300px"></div>
-      <div style="height:1285px"></div>
+      <div style="height:985px"></div>
       <div id="phaicodinh3"><img src="images/300600b.jpg" width="300px"></div>
     </div>
   </div>
